scrollbar css fix

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -12,16 +12,6 @@ body {
 * {
 	scrollbar-width: thin;
 	scrollbar-color: grey transparent;
-	::-webkit-scrollbar {
-		width: 16px;
-	}
-	::-webkit-scrollbar-track {
-		background: transparent;
-	}
-	::-webkit-scrollbar-thumb {
-		background-color: grey;
-		border: 3px solid #ffffff;
-	}
 }
 
 .background {
